k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hse-pulse-ingress
  namespace: hse-pulse
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  rules:
    - http:
        paths:
          - path: /pulseflow(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pulseflow-service
                port:
                  number: 8000
          - path: /careplanplus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: careplanplus-service
                port:
                  number: 8000
          - path: /pulsenotes(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pulsenotes-service
                port:
                  number: 8000
          - path: /medisync/api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: medisync-service
                port:
                  number: 8000
          - path: /medisync/ws(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: medisync-service
                port:
                  number: 8000
          - path: /medisync(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: medisync-ui-service
                port:
                  number: 3000
          - path: /mlflow(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mlflow-service
                port:
                  number: 5000
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
